--- a/tiny/home.html
+++ b/tiny/home.html
@@ -1,7 +1,13 @@
 <html>
-<head><title>test</title></head>
-<body> 
-<img align="middle" src="godzilla.gif">
-Dave O'Hallaron
+
+<head>
+    <!-- <link rel=\"shortcut icon\" href=\"#\"> -->
+    <title>test</title>
+</head>
+
+<body>
+    <img align="middle" src="godzilla.gif">
+    Dave O'Hallaron and JJH
 </body>
+
 </html>
