--- a/tiny/home.html
+++ b/tiny/home.html
@@ -1,13 +1,17 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-    <!-- <link rel=\"shortcut icon\" href=\"#\"> -->
-    <title>test</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Video Player</title>
 </head>
 
 <body>
-    <img align="middle" src="godzilla.gif">
-    Dave O'Hallaron and JJH
+    <video width="640" height="360" controls>
+        <source src="mcat.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
 </body>
 
 </html>
