--- a/tiny/home.html
+++ b/tiny/home.html
@@ -12,6 +12,16 @@
         <source src="mcat.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
+
+    <!-- 폼 데이터 추가 시작 -->
+    <form action="/cgi-bin/adder" method="GET">
+        <label for="inputBox">더하기:</label>
+        <input type="text1" id="inputBox1" name="f" placeholder="숫자입력">
+        <input type="text2" id="inputBox2" name="s" placeholder="숫자입력">
+        <input type="submit" value="제출">
+    </form>
+    <!-- 폼 데이터 추가 끝 -->
+
 </body>
 
 </html>
