--- a/tiny/home.html
+++ b/tiny/home.html
@@ -12,7 +12,7 @@
         <source src="mcat.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
-
+    <img align="middle" src="godzilla.gif">
     <!-- 폼 데이터 추가 시작 -->
     <form action="/cgi-bin/adder" method="GET">
         <label for="inputBox">더하기:</label>
