[feat] 프록시 초기

--- a/tiny/home.html
+++ b/tiny/home.html
@@ -8,10 +8,10 @@
 </head>
 
 <body>
-    <video width="640" height="360" controls>
+    <!-- <video width="640" height="360" controls>
         <source src="mcat.mp4" type="video/mp4">
         Your browser does not support the video tag.
-    </video>
+    </video> -->
     <img align="middle" src="godzilla.gif">
     <!-- 폼 데이터 추가 시작 -->
     <form action="/cgi-bin/adder" method="GET">
